# prosnet-prefect-pipelines

./: .gitignore  base-job-template.json  prefect.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.prefect/: flows.json  profiles.toml
pfp-prefect-pipelines/: create_provided_entities_graph.py  enrich_via_sparql.py  get_apis_data_and_push_to_repo.py  get_data_apis_vanilla.py  get_data_from_apis_instance.py  push_rdf_file_to_github_gitlab.py
pfp-prefect-pipelines/sparql/: create_provided_entities_graph.sparql  create_provided_entities_graph_v2.sparql  retrieve_provided_entities.sparql  retrieve_sameas.sparql
prosnet-prefect-pipelines/: geonames_place_index.py  push_to_typesense.py  wikidata-index.py  wikidata_index.py  wikidata_person_index.py  wikidata_place_index.py
prosnet-prefect-pipelines/sparql/: wikidata-city.sparql  wikidata-organization.sparql  wikidata-person.sparql
