[project]
name = "prosnet-prefect-pipelines"
version = "0.1.0"
description = ""
authors = [
	{name="Matthias Schlögl", email="matthias.schloegl@oeaw.ac.at"},
	{name="Birger Schacht", email="birger.schacht@oeaw.ac.at"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typesense==0.19.0",
    "sparqlwrapper==2.0.0",
    "prefect>=3.2.11,<=3.3" ,
    "gitpython==3.1.43",
    "pyoxigraph==0.4.6",
    "polars==1.20.0",
]

[tool.uv]
dev-dependencies = [
    "ruff==0.7.4",
    "debugpy==1.8.8",
    "pyright==1.1.389",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pfp-prefect-pipelines", "prosnet-prefect-pipelines"]
